# plugin_example

./: .gitignore  meson.build  readme.md
example/: meson.build
example/app/: main.cc  meson.build
example/include/: hello_from_here_impl.hh  hello_from_there_impl.hh  hello_plugin_interface.hh  meson.build
example/src/: hello_from_here_impl.cc  hello_from_there_impl.cc  meson.build
include/: meson.build  plugin.hh  plugin_declare.hh  plugin_loader.hh
